[package]
name = "gob-cloudflare"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "http2", "multipart"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
thiserror = "1.0.58"
url = "2.5"

[features]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
default = ["native-tls"]